<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.android1604.mustsee.ui.ChannelActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/channel_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/selectedTextColor"
        android:gravity="center_vertical">
        <ImageView
            android:id="@+id/channel_back_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/detail_title_back"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:text="@string/channel"/>
    </android.support.v7.widget.Toolbar>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:background="@color/colorWhite"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/channel_my_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorGray"
                android:textSize="12sp"
                android:textStyle="bold"
                android:padding="10dp"
                android:text="@string/my_channel"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorLightGray"
                android:layout_toRightOf="@id/channel_my_txt"
                android:layout_alignBaseline="@id/channel_my_txt"
                android:textSize="10sp"
                android:text="@string/channel_tips"/>
            <TextView
                android:id="@+id/channel_manage_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:padding="15dp"
                android:textStyle="bold"
                android:layout_alignParentRight="true"
                android:textColor="@color/selectedTextColor"
                android:text="@string/channel_manage"/>
        </RelativeLayout>

        <com.android1604.mustsee.ui.CustomMyChannelGridView
            android:id="@+id/channel_my_gv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:numColumns="3"
            android:stretchMode="columnWidth"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorGray"
            android:textSize="12sp"
            android:textStyle="bold"
            android:padding="10dp"
            android:text="@string/push_channel"/>
        <TextView
            android:id="@+id/channel_search_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorGray"
            android:textSize="14sp"
            android:padding="8dp"
            android:drawableLeft="@drawable/icon_title_search"
            android:drawablePadding="10dp"
            android:background="@drawable/channel_search_txt_bg"
            android:text="@string/channel_search"/>

        <com.android1604.mustsee.ui.CustomPushChannelGridView
            android:id="@+id/channel_push_gv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp"
            android:numColumns="3"
            android:stretchMode="columnWidth"/>

    </LinearLayout>


</LinearLayout>
