<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">
    <RadioGroup
        android:id="@+id/main_bottom_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="5dp"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">
        <RadioButton
            android:id="@+id/main_information_rb"
            style="@style/BottomRadioGroupStyle"
            android:checked="true"
            android:drawableTop="@drawable/radiobutton_information_slt"
            android:text="@string/information"
            />
        <RadioButton
            android:id="@+id/main_explore_rb"
            style="@style/BottomRadioGroupStyle"
            android:drawableTop="@drawable/radiobutton_explore_slt"
            android:text="@string/explore"
            />
        <RadioButton
            android:id="@+id/main_mine_rb"
            style="@style/BottomRadioGroupStyle"
            android:drawableTop="@drawable/radiobutton_mine_slt"
            android:text="@string/mine"
            />
    </RadioGroup>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#dddddd"
        android:layout_above="@id/main_bottom_radio_group"/>

    <FrameLayout
        android:id="@+id/main_container_fl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/main_bottom_radio_group">

    </FrameLayout>

</RelativeLayout>
