<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/channel_my_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorGray"
                android:textSize="12sp"
                android:textStyle="bold"
                android:padding="10dp"
                android:text="@string/my_channel"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorLightGray"
                android:layout_toRightOf="@id/channel_my_txt"
                android:layout_alignBaseline="@id/channel_my_txt"
                android:textSize="10sp"
                android:text="@string/channel_tips"/>
            <TextView
                android:id="@+id/channel_manage_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:padding="15dp"
                android:textStyle="bold"
                android:layout_alignParentRight="true"
                android:textColor="@color/selectedTextColor"
                android:text="@string/channel_manage"/>
            <ImageView
                android:id="@+id/drag_close_img"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_centerVertical="true"
                android:src="@drawable/channel_remove_icon"
                android:visibility="gone"
                android:layout_alignParentRight="true" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <com.android1604.mustsee.ui.DragDropGirdView
                    android:id="@+id/channel_my_gv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:divider="@null"
                    android:fadingEdge="none"
                    android:horizontalSpacing="12dp"
                    android:verticalSpacing="10dp"
                    android:numColumns="3"
                    app:fixed_type="true"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorGray"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:padding="10dp"
                    android:text="@string/push_channel"/>
                <TextView
                    android:id="@+id/channel_search_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorGray"
                    android:textSize="14sp"
                    android:padding="8dp"
                    android:drawableLeft="@drawable/icon_title_search"
                    android:drawablePadding="10dp"
                    android:background="@drawable/channel_search_txt_bg"
                    android:text="@string/channel_search"/>

                <com.android1604.mustsee.ui.CustomPushChannelGridView
                    android:id="@+id/channel_push_gv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="5dp"
                    android:numColumns="3"
                    android:stretchMode="columnWidth"/>
            </LinearLayout>

            <FrameLayout
                android:id="@+id/activity_overlay"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/tile_drag_shadow_overlay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:importantForAccessibility="no"
                    android:visibility="gone" />
            </FrameLayout>

        </RelativeLayout>

    </LinearLayout>

</ScrollView>